feat: land visual truth-source gates and closure pipeline